Added interface and enum support.